SysMsg and Prompt value help

--- a/genaiprojnew/webapp/css/style.css
+++ b/genaiprojnew/webapp/css/style.css
@@ -5,3 +5,6 @@
 .sapFFCL .sapFFCLColumn.sapFFCLPinnedColumn .sapFFCLColumnContent{
    width: 970px !important;
 }
+.sapMSplitContainerHideMode>.sapMSplitContainerDetail .sapUiResponsiveMargin, .sapUiResponsiveMargin {
+        margin: 1rem 1rem !important;
+    }
