Updated Merge code

--- a/genaiprojnew/webapp/css/style.css
+++ b/genaiprojnew/webapp/css/style.css
@@ -2,10 +2,12 @@
 .sapFFCLColumnBegin {
    width: 300px !important;
 }
-.sapFFCL .sapFFCLColumn.sapFFCLPinnedColumn .sapFFCLColumnContent{
+
+.sapFFCL .sapFFCLColumn.sapFFCLPinnedColumn .sapFFCLColumnContent {
    width: 970px !important;
 }
-.sapMSplitContainerHideMode>.sapMSplitContainerDetail .sapUiResponsiveMargin, .sapUiResponsiveMargin {
-        margin: 1rem 1rem !important;
+
+.sapMSplitContainerHideMode>.sapMSplitContainerDetail .sapUiResponsiveMargin,
+.sapUiResponsiveMargin {
+   margin: 1rem 1rem !important;
 }
- 
